emoji buttons are of a size appropriate for phones. Updated the font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ver 28 sep 2023 validated */
 * {
     margin: 0px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Tilt Neon', cursive;
 }
 
 ul {
@@ -47,30 +47,17 @@ ul {
     text-align: center;
 }
 
-#game_window {
-    margin-left: auto;
-    margin-right: auto;
-    width: 700px;
-    height: 400px;
-    outline: 1px;
-    outline-style: auto;
-}
-
 .announcement_board {
     outline: 1px;
     outline-style: auto;
 }
 
 .rps_button {
-    width: 100px;
-    padding: 5px;
+    font-size: 40px;
+    width: 60px;
+    height: 60px;
     margin-top: 5px;
     margin-bottom: 5px;
-}
-
-#player_board {
-    margin-left: 100px;
-    margin-right: 150px;
 }
 
 #player_slot_1 {
@@ -89,11 +76,6 @@ ul {
     background-color: white;
     border: solid grey 1px;
     border-radius: 5px;
-}
-
-#cpu_board {
-    margin-left: 150px;
-    margin-right: 100px;
 }
 
 #cpu_slot_1 {
@@ -130,4 +112,56 @@ ul {
     background-color: white;
     border: solid grey 1px;
     border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    #game_window {
+        width: 100%;
+        height: 450px;
+        outline: 1px;
+        outline-style: auto;
+    }
+
+    #player_board {
+        margin-left: 0px;
+        margin-right: 20px;
+    }
+
+    #cpu_board {
+        margin-left: 20px;
+        margin-right: 0px;
+    }
+    #submit_pick > button{
+        width: 70px;
+        height: 50px;
+    }
+}
+
+@media (min-width: 768px) {
+    h1 {
+
+    }
+
+    #game_window {
+        margin-left: auto;
+        margin-right: auto;
+        width: 700px;
+        height: 450px;
+        outline: 1px;
+        outline-style: auto;
+    }
+
+    #player_board {
+        margin-left: 100px;
+        margin-right: 150px;
+    }
+
+    #cpu_board {
+        margin-left: 150px;
+        margin-right: 100px;
+    }
 }
