--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,17 @@ button:hover {
     margin-bottom: 5px;
 }
 
+.game_rules {
+    margin-top: 100px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(38, 34, 42);
+    color: rgb(255, 232, 236);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #game_window {
     padding: 5px;
     background-color: rgb(255, 232, 236);
@@ -203,6 +214,10 @@ button:hover {
         width: 250px;
     }
 
+    .game_rules {
+        width: 100%;
+    }
+
     #game_window {
         width: 100%;
         height: 530px;
@@ -226,6 +241,10 @@ button:hover {
     h1 {
         font-size: 35px;
         width: 500px;
+    }
+
+    .game_rules {
+        width: 1000px;
     }
 
     #game_window {
