--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,20 @@
 }
 
 h1 {
-    color: rgb(255, 232, 236);
-    background-color: rgb(38, 34, 42);
+    color: #ffe8ec;
+    background-color: #26222a;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
     border-radius: 10px;
 }
 a, .navigation_bar {
-    color: rgb(255, 232, 236);
+    color: #ffe8ec;
     text-decoration: none;
 }
 
 a:hover {
-    color: lightcoral;
+    color: #f08080;
     text-decoration: underline;
 }
 
@@ -117,6 +117,11 @@ button:hover {
     text-align: center;
     display: flex;
     justify-content: center;
+}
+
+/* Cards that cannot be visually hovered */
+#cpu_slot_1:hover, #cpu_slot_2:hover, #cpu_slot_3:hover, #closed_submit_button:hover {
+    box-shadow: 0px 0px;
 }
 
 #game_rules {
